--- a/Analysis/supplier-emissions-analysis.ipynb
+++ b/Analysis/supplier-emissions-analysis.ipynb
@@ -112,8 +112,7 @@
     "joblib.dump(preprocessor, f'{output_dir}/preprocessor.joblib')\n",
     "joblib.dump(target_scaler, f'{output_dir}/target_scaler.joblib')\n",
     "\n",
-    "print('✅ Preprocessor and target scaler saved.')\n",
-    "print('\\n[NOTE] Bayesian hierarchical modeling section can be added later here.')"
+    "print('Preprocessor and target scaler saved.')"
    ]
   },
   {
