--- a/bnn/Model-bnn/BNN.ipynb
+++ b/bnn/Model-bnn/BNN.ipynb
@@ -77,7 +77,7 @@
     "y = df[target_col].values.reshape(-1, 1)\n",
     "\n",
     "X_processed = preprocessor.fit_transform(X)\n",
-    "y = StandardScaler().fit_transform(y)  # Normalise target\n",
+    "y = StandardScaler().fit_transform(y) \n",
     "\n",
     "# Train/test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_processed, y, test_size=0.2, random_state=42)\n",
@@ -390,7 +390,7 @@
     }
    ],
    "source": [
-    "# In your MC Dropout training notebook (where model is defined and trained)\n",
+    "# In MC Dropout training notebook (where model is defined and trained)\n",
     "torch.save(model.state_dict(), '/Users/georgepaul/Desktop/bayesian-proposal/models/mc_dropout_model.pth')\n",
     "print(\"Model saved.\")"
    ]
