--- a/bnn/Model-bnn/strict-bnn.ipynb
+++ b/bnn/Model-bnn/strict-bnn.ipynb
@@ -202,7 +202,7 @@
     "bnn.set_data(\"X\", X_test)\n",
     "bnn.set_data(\"y_data\", np.zeros_like(y_test))  # Dummy for shape match\n",
     "\n",
-    "# --- Manual forward pass from posterior weight samples ---\n",
+    "# Manual forward pass from posterior weight samples\n",
     "y_samples = []\n",
     "\n",
     "for i in range(200):  # increase for smoother estimates\n",
